# TorrentsDR

./: .gemini_run.bat  .gitignore  LINUX_GUIDE.md  PERFORMANCE.md  README.md  USAGE_GUIDE.md  VISUAL_STUDIO_SETUP.md  build.sh  build_fail_log.txt  build_fail_log_utf8.txt  build_log.txt  build_log_utf8.txt  check.bat  installer.iss  pubspec.yaml
android/: build_log.txt  build_log2.txt  build_log3.txt
android/app/: build.gradle.kts
integration_test/: simple_test.dart
lib/: main.dart
lib/models/: torrent_item.dart
lib/providers/: torrent_provider.dart
lib/screens/: add_torrent_screen.dart  download_queue_screen.dart  home_screen.dart  settings_screen.dart  splash_screen.dart  torrent_preview_screen.dart
lib/services/: settings_service.dart  torrent_service.dart
lib/theme/: dark_theme.dart
lib/utils/: app_dialogs.dart  formatters.dart
lib/widgets/: file_selection_dialog.dart  torrent_card.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: frb_generated.rs  lib.rs  main.rs
rust/src/api/: simple.rs
rust/src/bencode/: mod.rs
rust/src/download/: manager.rs  mod.rs  piece.rs
rust/src/magnet/: mod.rs
rust/src/peer/: connection.rs  message.rs  mod.rs
rust/src/storage/: mod.rs
rust/src/torrent/: mod.rs
rust/src/tracker/: mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_torrent_app.podspec
test/: widget_test.dart
windows/: CMakeLists.txt
(+23 files in other folders)
