[package]
name = "torrent-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "torrent_core"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "torrent-cli"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
sha1 = "0.10"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
bytes = "1.5"
hex = "0.4"
url = "2.5"

# For FFI
uniffi = { version = "0.25", optional = true }

[features]
default = []
ffi = ["uniffi"]
