[package]
name = "torrent-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_lib_torrent_app"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
librqbit = "8.1.1"
anyhow = "1.0"
flutter_rust_bridge = "=2.11.1"
url = "2.5"
hex = "0.4"
sha1 = "0.10"
rand = "0.8"
bytes = "1.5"
# ureq removed as we use librqbit's internal networking


[features]
default = []
